feat(email): implement SMTP email sending functionality and update environment configuration

--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,16 @@ ENCRYPTION_KEY="your-encryption-key"
 SENDGRID_API_KEY="your-sendgrid-api-key"
 EMAIL_FROM="noreply@yourdomain.com"
 APP_URL="https://yourdomain.com"
+# Email provider settings
+EMAIL_PROVIDER="smtp"
+# SMTP settings
+SMTP_HOST="smtp.resend.com"
+SMTP_FROM="noreply@exemple.com"
+SMTP_USER="resend"
+SMTP_PASSWORD="strongpass"
+SMTP_PORT="587"
+SMTP_USE_TLS=true
+SMTP_USE_SSL=false
 
 LANGFUSE_PUBLIC_KEY="your-langfuse-public-key"
 LANGFUSE_SECRET_KEY="your-langfuse-secret-key"
